<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">导航</string>
    <string name="app_currency_close">关闭</string>
    <string name="app_currency_back">返回</string>
    <string name="delete">删除</string>
    <string name="quick">快</string>
    <string name="slow">慢</string>
    <string name="tense">紧张</string>
    <string name="gas_95">95#</string>
    <string name="gas_92">92#</string>
    <string name="main_level_scale">200米</string>
    <string name="main_go_home">回家</string>
    <string name="main_go_company">去公司</string>
    <string name="main_go_home_text">回家%s</string>
    <string name="main_go_company_text">去公司%s</string>
    <string name="main_go_arriver_time">预计%s到达</string>
    <string name="main_search_hint">搜索目的地</string>
    <string name="frequent_search_hint">请输入简体中文，拼音和字母</string>
    <string name="home_search_hint">搜索家的地址</string>
    <string name="company_search_hint">搜索公司的地址</string>
    <string name="offline_search_hint">输入省份或城市名称进行搜索</string>
    <string name="no_search_history">暂无历史记录</string>
    <string name="st_search_loading">加载中…</string>
    <string name="favorite_switch_common">常用收藏夹</string>
    <string name="favorite_switch_charge">专属充电站</string>
    <string name="favorite_no_charging">暂无数据</string>
    <string name="favorite_no_charging_tip">请先登录SGM账号后再试试</string>
    <string name="favorite_no_charging_data">暂未收藏专属充电站</string>
    <string name="favorite_charging_request_fail">数据获取失败，请刷新</string>
    <string name="favorite_charging_offline">无网络连接，请检查网络后重试</string>
    <string name="account_login">登录</string>
    <string name="search_async_sgm_data">是否同步云端数据</string>
    <string name="search_async">同步</string>
    <string name="search_charge_self">奥特能</string>
    <string name="search_charge">自营</string>
    <string name="search_charge_self_filter">自营站数据不支持筛选</string>
    <string name="search_charge_self_filter_hint">功能环境不具备</string>
    <string name="search_charge_current_time">当前</string>
    <string name="reservation_max_time">当日取消次数已达3次，无法继续预约</string>
    <string name="search_label_fastest">最快</string>
    <string name="search_label_closest">最近</string>
    <string name="charge_price_content">充电费用由XXXX为您提供,显示价格仅供参考,请以充电站的实际费用为准。</string>
    <string name="delete_all">删除全部</string>
    <string name="delete_charge_station_title">删除充电站</string>
    <string name="delete_charge_station_content">自动添加的充电站暂不支持逐个删除，是否要删除全部?</string>
    <string name="reminder_dialog_cancel">取消</string>
    <string name="km">公里</string>
    <string name="net_error">网络异常，请检查网络后重试</string>
    <string name="kilometre">km</string>
    <string name="m">m</string>
    <string name="meter">米</string>
    <string name="rg_sg_after_meters"><Data><![CDATA[%1$s]]></Data></string>
    <string name="navi_btn_exit">退出导航</string>
    <string name="navi_bridge_up">在桥上</string>
    <string name="navi_bridge_down">在桥下</string>
    <string name="navi_road_auxiliary">在辅路</string>
    <string name="navi_road_main">在主路</string>
    <string name="navi_switch_to_bridge_up">已切换至桥上</string>
    <string name="navi_switch_to_bridge_down">已切换至桥下</string>
    <string name="navi_switch_to_road_main">已切换至主路</string>
    <string name="navi_switch_to_road_auxiliary">已切换至辅路</string>
    <string name="navi_send_to_phone">已发送至手机</string>
    <string name="navi_send_to_phone_once_in_ten_minute">10分钟内仅可发送一次目的地到手机</string>
    <string name="navi_no_net">⽹络异常，请检查⽹络后重试</string>
    <string name="navi_no_login">登录高德账号才能使用该功能</string>
    <string name="navi_overview_switch">看全览</string>
    <string name="navi_overview_out">退出全览</string>
    <string name="navi_overview_fixed">固定全览</string>
    <string name="navi_refresh">刷新</string>
    <string name="navi_broadcast_minimalism">极简播报</string>
    <string name="navi_broadcast_detail">详细播报</string>
    <string name="navi_broadcast_concise">简洁播报</string>
    <string name="navi_setting">设置</string>
    <string name="navi_up_3d">3D车头</string>
    <string name="navi_up_2d">2D车头</string>
    <string name="navi_north_2d">2D正北</string>
    <string name="navi_along_service">服务区</string>
    <string name="navi_along_parking">停车场</string>
    <string name="navi_along_search">沿途</string>
    <string name="navi_voice">静音</string>
    <string name="navi_mute">已静音</string>
    <string name="navi_broadcast">播报中</string>
    <string name="navi_start_broadcast">为您提供导航播报</string>
    <string name="navi_more_setup">更多</string>
    <string name="navi_excepted">预计余</string>
    <string name="navi_energy_power">到达余</string>
    <string name="auto_current_route">当前道路</string>
    <string name="auto_navi_text_residue_diving">•</string>
    <string name="arrival_add">+</string>
    <string name="navi_normal_tip">随后</string>
    <string name="navi_city_name_postfix">市</string>
    <string name="navi_town_name_postfix">区</string>
    <string name="st_quick_search_station">加油站</string>
    <string name="st_quick_search_charge">充电站</string>
    <string name="st_quick_search_food">美食</string>
    <string name="st_quick_search_lavatory">卫生间</string>
    <string name="st_quick_search_parking">停车场</string>
    <string name="st_quick_search_car_washing">洗车</string>
    <string name="st_quick_search_more">更多</string>
    <string name="navi_arrived">已到达</string>
    <string name="navi_via_count">等%d个途经点</string>
    <string name="navi_continue_navi">继续导航</string>
    <string name="navi_speed_suggest">建议车速</string>
    <string name="navi_remaining_green_lights">剩余绿灯</string>
    <string name="navi_remaining_distance">剩余距离</string>
    <string name="navi_speed_overall">区间限速</string>
    <string name="navi_add_via">途径点</string>
    <string name="navi_add_via_hint">请输入简体中文，拼音和字母</string>
    <string name="navi_del">删除</string>
    <string name="navi_recommend">推荐</string>
    <string name="navi_via_item_pass">经</string>
    <string name="navi_via_item_charge">充</string>
    <string name="navi_via_item_end">终</string>
    <string name="navi_recommend_parking_tight">紧张</string>
    <string name="navi_recommend_parking_adequate">充足</string>
    <string name="navi_recommend_parking_end">当前终点</string>
    <string name="navi_via_num">"%s 等%d个途径点"</string>
    <string name="navi_meter_start">仪表导航已开启，地图默认显示全程路线</string>
    <string name="navi_send">发送</string>
    <string name="navi_send_request_info">是否需要发送目的地到手机继续导航？</string>
    <string name="navi_arrive_destination">即将到达目的地</string>
    <string name="navi_tel">电话</string>
    <string name="left_battery_warning">续航里程不足50km</string>
    <string name="charge_station_crowd_tip">%s充电站目前拥挤</string>
    <string name="charge_station_not_open">%s充电站目前未营业</string>
    <string name="charge_station_will_stop">%s充电站即将停止营业</string>
    <string name="search_new_charge_station">查找新站</string>
    <string name="go_charge">去充电</string>
    <string name="left_charge_station_low">剩余里程充电站较少</string>
    <string name="navi_along_way_search">沿途搜</string>
    <string name="navi_map_mode_switch_fail">视角切换失败，%s无法切换</string>
    <string name="navi_broadcast_switch">已切换唯%s</string>
    <string name="quick_charge">快</string>
    <string name="slow_charge">慢</string>
    <string name="slash">/</string>
    <string name="navi_gas_92">#92</string>
    <string name="navi_gas_95">#95</string>
    <string name="navi_gas_98">#98</string>
    <string name="toll">收费站</string>
    <string name="service">服务区</string>
    <string name="current_newest_path">当前已是最新路线</string>
    <string name="switch_car_angle">已切换至%s视角</string>
    <string name="navi_car_head_switch_while_overview">路线概览时保持正北朝上</string>
    <string name="navi_unknown_address">未知地址</string>
    <string name="navi_none">--</string>
    <string name="msg_action_know">我知道了</string>
    <string name="msg_action_search_new">查找新站</string>
    <string name="msg_action_go_charging">去充电</string>
    <string name="msg_action_update">刷新</string>
    <string name="msg_action_open">打开</string>
    <string name="tip_msg_1">续航里程不足50km</string>
    <string name="tip_msg_2">%s目前拥挤</string>
    <string name="tip_msg_2_tts">%s目前拥挤，是否为您查找沿途充电站</string>
    <string name="tip_msg_2_tts2">%s目前拥挤，是否为您刷新补能规划</string>
    <string name="tip_msg_3">已为您刷新了补能规划</string>
    <string name="tip_msg_5">电量无法抵达%s</string>
    <string name="tip_msg_5_tts">电量无法抵达%s，是否为您查找沿途充电站</string>
    <string name="tip_msg_5_tts2">电量无法抵达%s，已为您刷新了补能规划</string>
    <string name="tip_msg_6">剩余里程内充电站较少</string>
    <string name="tip_msg_7">预约充电站%s分钟后超时</string>
    <string name="tip_msg_8">预约充电桩地锁已打开</string>
    <string name="tip_msg_9">%s即将停止营业</string>
    <string name="tip_msg_10">%s目前未营业</string>
    <string name="tip_msg_10_tts">%s目前未营业，是否为您查找沿途充电站</string>
    <string name="tip_msg_10_tts2">%s目前未营业，已为您刷新了补能规划</string>
    <string name="tip_msg_11">您错过了%s</string>
    <string name="tip_msg_11_tts">您错过了%s，是否为您查找沿途充电站</string>
    <string name="tip_msg_11_tts2">您错过了%s，已为您刷新了补能规划</string>
    <string name="tip_msg_12">抵达终点后剩余电量低</string>
    <string name="tip_msg_12_sub_title">是否打开补能规划？</string>
    <string name="tbt_loading">请求路线信息中</string>
    <string name="driven_dist">导航里程</string>
    <string name="driven_time">驾驶时长</string>
    <string name="estim_consum">预计节油</string>
    <string name="total_consum">累积节油</string>
    <string name="route_search_loading">路线规划中…</string>
    <string name="route_offline_loading">离线路线规划中…</string>
    <string name="route_along_search">沿途搜索</string>
    <string name="route_change_preference">偏好设置</string>
    <string name="route_preference">路线偏好</string>
    <string name="route_charging_station">充电</string>
    <string name="route_gas_station">加油</string>
    <string name="route_weather">天气</string>
    <string name="route_along_service">服务区</string>
    <string name="route_charge_gas_along">沿途</string>
    <string name="route_charge_gas_end">终点</string>
    <string name="route_charge_gas_around">周边</string>
    <string name="route_preference_recommend">推荐路线</string>
    <string name="route_preference_avoiding_congestion">躲避拥堵</string>
    <string name="route_preference_less_charge">少收费</string>
    <string name="route_preference_not_highway">不走高速</string>
    <string name="route_preference_first_highway">高速优先</string>
    <string name="route_preference_first_main_road">大路优先</string>
    <string name="route_preference_fastest_speed">时间优先</string>
    <string name="route_preference_avoiding_congestion_and_less_charge">躲避拥堵+少收费</string>
    <string name="route_preference_avoiding_congestion_and_not_highway">躲避拥堵+不走高速</string>
    <string name="route_preference_avoiding_congestion_and_first_highway">躲避拥堵+高速优先</string>
    <string name="route_preference_less_charge_and_not_highway">少收费+不走高速</string>
    <string name="route_preference_avoiding_congestion_and_less_charge_not_highway">躲避拥堵+少收费+不走高速</string>
    <string name="route_preference_avoiding_congestion_and_first_main_road">躲避拥堵+大路优先</string>
    <string name="route_preference_avoiding_congestion_and_fastest_speed">躲避拥堵+时间优先</string>
    <string name="route_multiple_destinations">终点有多个目的地，请选择前往</string>
    <string name="route_details_list_header">起点：我的位置</string>
    <string name="route_details_list_footer">终点：</string>
    <string name="route_details_light_count">红绿灯</string>
    <string name="route_details_light_count_unit">个</string>
    <string name="route_details_after_to_arrive">后进入</string>
    <string name="go_home">回家</string>
    <string name="route_service_list_item_add">添加</string>
    <string name="route_service_list_item_added">已添加</string>
    <string name="route_service_details_add_via">添加途经点</string>
    <string name="route_service_details_add_via_success">途径点添加成功</string>
    <string name="route_service_details_remove_via">删除途经点</string>
    <string name="st_go_here">去这里</string>
    <string name="st_poi_details_bottom_around">周边</string>
    <string name="st_poi_details_favorite">收藏</string>
    <string name="st_poi_details_bottom_phone">电话</string>
</resources>