<?xml version="1.0" encoding="utf-8"?>
<com.sgm.navi.ui.view.SkinLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <com.sgm.navi.ui.view.SkinTextView
        android:id="@+id/tv_logo_quick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quick"
        android:textColor="@color/card_quick_color"
        android:textSize="@dimen/sp_26" />

    <com.sgm.navi.ui.view.SkinTextView
        android:id="@+id/tv_quick_use"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_9"
        android:text="@string/quick"
        android:textColor="@color/traffic_title_color"
        android:textSize="@dimen/sp_26"
        tools:text="66" />

    <com.sgm.navi.ui.view.SkinTextView
        android:id="@+id/tv_quick_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:textColor="@color/traffic_title_color"
        android:textSize="@dimen/sp_26"
        tools:text="/88" />


    <com.sgm.navi.ui.view.SkinTextView
        android:id="@+id/tv_logo_slow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_17"
        android:text="@string/slow"
        android:textColor="@color/card_slow_color"
        android:textSize="@dimen/sp_26" />

    <com.sgm.navi.ui.view.SkinTextView
        android:id="@+id/tv_slow_use"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_9"
        android:text="@string/quick"
        android:textColor="@color/traffic_title_color"
        android:textSize="@dimen/sp_26"
        tools:text="66" />

    <com.sgm.navi.ui.view.SkinTextView
        android:id="@+id/tv_slow_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:textColor="@color/traffic_title_color"
        android:textSize="@dimen/sp_26"
        tools:text="/88" />

    <com.sgm.navi.ui.view.SkinTextView
        android:id="@+id/tv_tense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:text="@string/tense"
        android:visibility="invisible"
        tools:visibility="visible"
        android:textColor="@color/card_tense_color"
        android:textSize="@dimen/sp_26" />

    <com.sgm.navi.ui.view.SkinTextView
        android:id="@+id/tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/traffic_title_color"
        android:textSize="@dimen/sp_26"
        android:text="港城广场充电111-112"/>
</com.sgm.navi.ui.view.SkinLinearLayout>