<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="ScenePoiDetailContentView"
            type="com.fy.navi.scene.impl.poi.ScenePoiDetailContentViewImpl" />
    </data>

    <com.fy.navi.ui.view.SkinConstraintLayout
        android:layout_width="@dimen/dp_820"
        android:layout_height="@dimen/dp_108"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.fy.navi.ui.view.SkinConstraintLayout
            android:id="@+id/stl_start_route"
            android:layout_width="@dimen/dp_334"
            android:layout_height="match_parent"
            android:background="@drawable/bg_details_bottom_go_here"
            app:layout_constraintStart_toStartOf="parent">

            <com.fy.navi.ui.view.SkinImageView
                android:id="@+id/siv_start_route"
                android:layout_width="@dimen/dp_68"
                android:layout_height="@dimen/dp_68"
                android:src="@drawable/icon_details_bottom_go_here"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/stv_start_route"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                />

            <com.fy.navi.ui.view.SkinTextView
                android:id="@+id/stv_start_route"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_24"
                android:text="@string/st_go_here"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_40"
                app:layout_goneMarginStart="@dimen/dp_0"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/siv_start_route"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </com.fy.navi.ui.view.SkinConstraintLayout>

        <com.fy.navi.ui.view.SkinConstraintLayout
            android:id="@+id/stl_function"
            android:layout_width="@dimen/dp_406"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginEnd="@dimen/dp_14"
            app:layout_constraintStart_toEndOf="@+id/stl_start_route"
            app:layout_constraintEnd_toEndOf="parent">

            <com.fy.navi.ui.view.SkinConstraintLayout
                android:id="@+id/stl_phone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintEnd_toStartOf="@+id/stl_around_search"
                app:layout_constraintStart_toStartOf="parent">

                <com.fy.navi.ui.view.SkinImageView
                    android:id="@+id/siv_phone"
                    android:layout_width="@dimen/dp_68"
                    android:layout_height="@dimen/dp_68"
                    android:src="@drawable/img_basic_ic_phone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.fy.navi.ui.view.SkinTextView
                    android:id="@+id/stv_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/st_poi_details_bottom_phone"
                    android:textColor="@color/poi_details_bottom_icon"
                    android:textSize="@dimen/sp_36"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </com.fy.navi.ui.view.SkinConstraintLayout>

            <com.fy.navi.ui.view.SkinConstraintLayout
                android:id="@+id/stl_around_search"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toStartOf="@+id/stl_poi_favorites"
                app:layout_constraintStart_toEndOf="@+id/stl_phone">

                <com.fy.navi.ui.view.SkinImageView
                    android:id="@+id/siv_around_search"
                    android:layout_width="@dimen/dp_68"
                    android:layout_height="@dimen/dp_68"
                    android:src="@drawable/img_basic_ic_search"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.fy.navi.ui.view.SkinTextView
                    android:id="@+id/stv_around_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/st_poi_details_bottom_around"
                    android:textColor="@color/poi_details_bottom_icon"
                    android:textSize="@dimen/sp_36"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </com.fy.navi.ui.view.SkinConstraintLayout>

            <com.fy.navi.ui.view.SkinConstraintLayout
                android:id="@+id/stl_poi_favorites"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/stl_around_search">

                <com.fy.navi.ui.view.SkinImageView
                    android:id="@+id/siv_poi_favorites"
                    android:layout_width="@dimen/dp_68"
                    android:layout_height="@dimen/dp_68"
                    android:src="@drawable/icon_basic_ic_star_default"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.fy.navi.ui.view.SkinTextView
                    android:id="@+id/stv_poi_favorites"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/st_poi_details_favorite"
                    android:textColor="@color/poi_details_bottom_icon"
                    android:textSize="@dimen/sp_36"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </com.fy.navi.ui.view.SkinConstraintLayout>
        </com.fy.navi.ui.view.SkinConstraintLayout>

    </com.fy.navi.ui.view.SkinConstraintLayout>
</layout>