<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />

        <variable
            name="viaDetail"
            type="com.fy.navi.scene.impl.navi.SceneNaviViaDetailImpl" />
    </data>

    <com.fy.navi.ui.view.SkinConstraintLayout
        android:layout_width="@dimen/dp_698"
        android:layout_height="@dimen/dp_162"
        android:paddingVertical="@dimen/dp_29"
        android:paddingHorizontal="@dimen/dp_29"
        android:background="@drawable/bg_shadow_navi_buick">
        
        <com.fy.navi.ui.view.SkinImageView
            android:id="@+id/siv_via_detail_icon"
            android:layout_width="@dimen/dp_58"
            android:layout_height="@dimen/dp_58"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="@dimen/dp_8"
            android:background="@{viaDetail.mViaIcon}"/>

        <com.fy.navi.ui.view.SkinTextView
            android:id="@+id/stv_via_detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:maxWidth="@dimen/dp_500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/dp_74"
            android:layout_marginTop="@dimen/dp_12"
            android:text="@{viaDetail.mViaTitle}"
            android:textSize="@dimen/sp_30"
            android:textColor="@color/navi_color_000000_100"
            tools:text="大雨加油站" />

        <!--途经点详情卡的内容-->
        <com.fy.navi.ui.view.SkinConstraintLayout
            android:id="@+id/sc_via_detail_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="@dimen/dp_74"
            android:layout_marginBottom="@dimen/dp_12">

            <!--可获取到空闲充电站的内容（显示空闲/总数）-->
            <com.fy.navi.ui.view.SkinLinearLayout
                android:id="@+id/sl_via_detail_charge_with_free_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{viaDetail.mViaContent == 0 ? View.VISIBLE : View.GONE}"
                android:orientation="horizontal">

                <com.fy.navi.ui.view.SkinTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quick_charge"
                    android:textSize="@dimen/sp_26"
                    android:textColor="@color/navi_color_4ABA59_100" />

                <com.fy.navi.ui.view.SkinTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_8"
                    android:textSize="@dimen/sp_26"
                    android:text="@{viaDetail.mFastChargeFree}"
                    tools:text="66"
                    android:textColor="@color/navi_color_000000_100"/>

                <com.fy.navi.ui.view.SkinTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/slash"
                    android:textSize="@dimen/sp_26"
                    android:textColor="@color/navi_color_000000_50"/>

                <com.fy.navi.ui.view.SkinTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_26"
                    android:text="@{viaDetail.mFastChargeTotal}"
                    tools:text="88"
                    android:textColor="@color/navi_color_000000_50"/>

                <com.fy.navi.ui.view.SkinTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/slow_charge"
                    android:textSize="@dimen/sp_26"
                    android:layout_marginStart="@dimen/dp_16"
                    android:textColor="@color/navi_color_FF8500_100" />

                <com.fy.navi.ui.view.SkinTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_8"
                    android:textSize="@dimen/sp_26"
                    android:text="@{viaDetail.mSlowChargeFree}"
                    tools:text="66"
                    android:textColor="@color/navi_color_000000_100"/>

                <com.fy.navi.ui.view.SkinTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/slash"
                    android:textSize="@dimen/sp_26"
                    android:textColor="@color/navi_color_000000_50"/>

                <com.fy.navi.ui.view.SkinTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_26"
                    android:text="@{viaDetail.mSlowChargeTotal}"
                    tools:text="88"
                    android:textColor="@color/navi_color_000000_50"/>
            </com.fy.navi.ui.view.SkinLinearLayout>

            <!--不可获取到空闲充电站的内容（只显示总数）-->
            <com.fy.navi.ui.view.SkinLinearLayout
                android:id="@+id/sl_via_detail_charge_without_free_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{viaDetail.mViaContent == 1 ? View.VISIBLE : View.GONE}"
                android:orientation="horizontal">

                <com.fy.navi.ui.view.SkinTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quick_charge"
                    android:textSize="@dimen/sp_26"
                    android:textColor="@color/navi_color_4ABA59_100" />

                <com.fy.navi.ui.view.SkinTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_8"
                    android:textSize="@dimen/sp_26"
                    android:text="@{viaDetail.mFastChargeTotal}"
                    tools:text="66"
                    android:textColor="@color/navi_color_000000_100"/>

                <com.fy.navi.ui.view.SkinTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/slow_charge"
                    android:textSize="@dimen/sp_26"
                    android:layout_marginStart="@dimen/dp_16"
                    android:textColor="@color/navi_color_FF8500_100" />

                <com.fy.navi.ui.view.SkinTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_8"
                    android:textSize="@dimen/sp_26"
                    android:text="@{viaDetail.mSlowChargeTotal}"
                    tools:text="66"
                    android:textColor="@color/navi_color_000000_100"/>
            </com.fy.navi.ui.view.SkinLinearLayout>

            <!--可获取到空闲停车场的内容（显示空闲/总数）-->
            <com.fy.navi.ui.view.SkinLinearLayout
                android:id="@+id/sl_via_detail_parking_with_free_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{viaDetail.mViaContent == 2 ? View.VISIBLE : View.GONE}"
                android:orientation="horizontal">

                <com.fy.navi.ui.view.SkinTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_26"
                    android:text="@{viaDetail.mParkingFree}"
                    tools:text="44"
                    android:textColor="@color/navi_color_000000_100"/>

                <com.fy.navi.ui.view.SkinTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/slash"
                    android:textSize="@dimen/sp_26"
                    android:textColor="@color/navi_color_000000_50"/>

                <com.fy.navi.ui.view.SkinTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_26"
                    android:text="@{viaDetail.mParkingTotal}"
                    tools:text="88"
                    android:textColor="@color/navi_color_000000_50"/>

            </com.fy.navi.ui.view.SkinLinearLayout>

            <!--不可获取到空闲停车场的内容（只显示总数）-->
            <com.fy.navi.ui.view.SkinLinearLayout
                android:id="@+id/sl_via_detail_parking_without_free_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{viaDetail.mViaContent == 3 ? View.VISIBLE : View.GONE}"
                android:orientation="horizontal">

                <com.fy.navi.ui.view.SkinTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_26"
                    android:text="@{viaDetail.mParkingTotal}"
                    tools:text="44"
                    android:textColor="@color/navi_color_000000_100"/>

            </com.fy.navi.ui.view.SkinLinearLayout>

            <!--加油站信息-->
            <com.fy.navi.ui.view.SkinLinearLayout
                android:id="@+id/sl_via_detail_gas_station"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{viaDetail.mViaContent == 4 ? View.VISIBLE : View.GONE}"
                android:orientation="horizontal">

                <com.fy.navi.ui.view.SkinTextView
                    android:id="@+id/stv_gas_92"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/navi_gas_92"
                    android:textSize="@dimen/sp_26"
                    android:visibility="@{viaDetail.mGas92Num == 1 ? View.VISIBLE : View.GONE}"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:textColor="@color/navi_color_000000_100"/>

                <com.fy.navi.ui.view.SkinTextView
                    android:id="@+id/stv_gas_95"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/navi_gas_95"
                    android:visibility="@{viaDetail.mGas95Num == 1 ? View.VISIBLE : View.GONE}"
                    android:textSize="@dimen/sp_26"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:textColor="@color/navi_color_000000_100"/>

                <com.fy.navi.ui.view.SkinTextView
                    android:id="@+id/stv_gas_98"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="@{viaDetail.mGas98Num == 1 ? View.VISIBLE : View.GONE}"
                    android:text="@string/navi_gas_98"
                    android:textSize="@dimen/sp_26"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:textColor="@color/navi_color_000000_100"/>

            </com.fy.navi.ui.view.SkinLinearLayout>


        </com.fy.navi.ui.view.SkinConstraintLayout>



    </com.fy.navi.ui.view.SkinConstraintLayout>
</layout>